corrected mapper issue.. manual mapping included. securityConfig changed.